--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
